# swe1-app

./: .travis.yml  README.md  db.sqlite3  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ebextensions/: django.config
polls/: views.py
polls/migrations/: 0001_initial.py  0002_auto_20230301_2237.py
polls/templates/polls/: detail.html  index.html  results.html
swe1_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
swe1_app/templates/swe1_app/: index.html
tests/: test_models.py  test_views.py
